--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ cat <<EOF > index.html
   <title>Тестируем PHP</title>
  </head>
  <body bgcolor=green>
- <p style = "color: red; text-align: center; font-size: 70px;">Привет, мир от меня!</p>
+ <p style = "color: red; text-align: center; font-size: 70px;">Привет, мир от меня!!! И вамм!!</p>
  </body>
 </html>
 EOF
