--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@ echo "Start"
 cat <<EOF > index.html
 <html>
  <head>
-  <title>Тестируем PHP</title>
+  <title>РўРµСЃС‚РёСЂСѓРµРј PHP</title>
  </head>
  <body bgcolor=green>
- <p style = "color: red; text-align: center; font-size: 70px;">Привет, мир от меня!!! И вамм!!</p>
- </body>
+ <p style = "color: red; text-align: center; font-size: 70px;">Hello World ;)!</p>
+ <p style = "color: blue; text-align: center; font-size: 70px;">:) Deploy Publish Over SSH ;)!</p>
+ <p style = "color: blue; text-align: center; font-size: 70px;">:) From Jenkins and Github)!</p>
+</body>
 </html>
 EOF
 echo "finish"
-ls -la
