--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 echo "Start"
-cat <<EOF > index.html
+<EOF >
+index.html
 <html>
  <head>
   <title>Тестируем PHP</title>
@@ -10,5 +11,5 @@ cat <<EOF > index.html
  <p style = "color: blue; text-align: center; font-size: 70px;">:) From Jenkins and Github)!</p>
 </body>
 </html>
-EOF
+</EOF>
 echo "finish"
