--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-echo "Start"
-<EOF >
-index.html
-<html>
+<!DOCTYPE html>
+<html lang="en">
  <head>
   <title>Тестируем PHP</title>
  </head>
@@ -11,5 +9,3 @@ index.html
  <p style = "color: blue; text-align: center; font-size: 70px;">:) From Jenkins and Github)!</p>
 </body>
 </html>
-</EOF>
-echo "finish"
