--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <body bgcolor=green>
  <p style = "color: red; text-align: center; font-size: 70px;">Hello World ;)!</p>
  <p style = "color: blue; text-align: center; font-size: 70px;">:) Deploy Publish Over SSH ;)!</p>
- <p style = "color: blue; text-align: center; font-size: 70px;">:) From Jenkins and Github)!</p>
+ <p style = "color: yellow; text-align: center; font-size: 70px;">:) From Jenkins and Github)!</p>
+ <p style = "color: black; text-align: center; font-size: 900px;">:) Hello from jenkins, this is deploy from git and notification to slack)!</p>
 </body>
 </html>
