--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <title>Тестируем PHP</title>
+  <title>Тестируем  и вспоминаем PHP</title>
  </head>
  <body bgcolor=green>
  <p style = "color: black; text-align: center; font-size: 80px;">Hello World of Tanks ;)!</p>
  <p style = "color: blue; text-align: center; font-size: 70px;">:) Deploy Publish Over SSH after update ;)!</p>
  <p style = "color: yellow; text-align: center; font-size: 70px;">:) From Jenkins and Github)!</p>
- <p style = "color: red; text-align: center; font-size: 50px;">:) The show)!</p>
+ <p style = "color: red; text-align: center; font-size: 50px;">:) The show me hands)!</p>
  <p style = "color: black; text-align: center; font-size: 50px;">:) Hello from jenkins, this is deploy from git and notification to slack)after update module!</p>
 </body>
 </html>
