--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Тестируем  и вспоминаем PHP</title>
  </head>
  <body bgcolor=green>
- <p style = "color: red; text-align: center; font-size: 80px;">Hello GIT my young friend ;)!</p>
+ <p style = "color: red; text-align: center; font-size: 80px;">Hello GIT from APACHE ip 138 ;)!</p>
  <p style = "color: blue; text-align: center; font-size: 70px;">:) Deploy Publish Over SSH after update ;)!</p>
  <p style = "color: yellow; text-align: center; font-size: 70px;">:) From Jenkins and Github)!</p>
  <p style = "color: red; text-align: center; font-size: 50px;">:)  show me your hands)!</p>
